# syncer

./: .gitignore  Cargo.toml  Makefile  README.md
.trae/documents/: lan-clipboard-architecture-plan.md
apps/flutter_client/: README.md  pubspec.yaml
apps/flutter_client/android/app/: build.gradle.kts
apps/flutter_client/android/app/src/main/kotlin/com/example/flutter_client/: MainActivity.kt
apps/flutter_client/lib/: main.dart
apps/flutter_client/lib/src/: app.dart
apps/flutter_client/lib/src/ffi/: syncer_native.dart
apps/flutter_client/lib/src/state/: app_state.dart
apps/flutter_client/lib/src/ui/: syncer_root.dart
apps/flutter_client/lib/src/ui/pages/: conflict_resolution_page.dart  device_detail_page.dart  device_discovery_page.dart  exception_state_page.dart  home_page.dart  pairing_flow_page.dart  security_trust_page.dart  settings_page.dart  startup_permissions_page.dart  sync_history_page.dart
apps/flutter_client/test/: widget_test.dart
apps/flutter_client/windows/runner/: Runner.rc
crates/syncer-clipboard/: Cargo.toml
crates/syncer-clipboard/src/: lib.rs
crates/syncer-core/: Cargo.toml
crates/syncer-core/src/: lib.rs
crates/syncer-discovery/: Cargo.toml
crates/syncer-discovery/src/: lib.rs
crates/syncer-ffi/: Cargo.toml
crates/syncer-ffi/src/: lib.rs
crates/syncer-transport/: Cargo.toml
crates/syncer-transport/src/: lib.rs
docs/architecture/: ffi-api.md  protocol-spec.md  task-tracker.md  test-matrix.md
docs/ui-ux/: README.md  lan-clipboard-pages.md
